# gato

./: .gitignore  ARCHITECTURE.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml  gato-ci.yml
assets/images/: README.md
docs/architecture/: overview.md
docs/database/: schema.md
docs/decisions/: adr-001-to-006.md
docs/implementation/: github-connect.md  phase-6-to-8-summary.md  project-summary.md
docs/sync/: engine.md
lib/: gato.dart  main.dart
lib/core/constants/: app_constants.dart
lib/core/error/: exceptions.dart  failures.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: utils.dart
lib/data/repositories_impl/: achievement_repository_impl.dart  business_repository_impl.dart  community_group_repository_impl.dart  insurance_product_repository_impl.dart  loan_repository_impl.dart  product_repository_impl.dart  savings_repository_impl.dart  transaction_repository_impl.dart  trust_score_repository_impl.dart  voice_command_repository_impl.dart
lib/domain/entities/: achievement.dart  audit_log.dart  business.dart  community_group.dart  entities.dart  insurance_product.dart  loan.dart  product.dart  savings_goal.dart  sync_queue.dart  transaction.dart  trust_score.dart  voice_command.dart
lib/domain/repositories/: achievement_repository.dart  business_repository.dart  community_group_repository.dart  (+9 more)
lib/routes/: app_router.dart
lib/services/: config.dart  services.dart
linux/: CMakeLists.txt  my_application.cc  my_application.h
scripts/: local_dev.sh  setup.sh
test/services/: trust_score_service_test.dart
(+46 files in other folders)
